<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OrderYourCoffee</string>
    <string name="name"> Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="cinnamon">Cinnamon</string>
    <string name="nutmeg">Nutmeg</string>
    <string name="nutella">Nutella</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="mint">Mint</string>
    <string name="ice_cream">Ice Cream</string>

    <string name="order">order</string>
    <string name="initial_quantity_value">2</string>
    <string name="order_summary_price">Total: </string>
    <string name="order_summary_name">Name :<xliff:g id="name" example="amy" >%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Added Whipped cream ?<xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Added Chocolate ?<xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="below_one_coffee_message">You cannot have less then one coffee</string>
    <string name="above_100_coffee_message">You cannot have more then 100 coffee</string>
    <string name="thank_you">Thank You!</string>
    <string name="order_summary_email_subject">Only java for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="quantity_text">0</string>

</resources>
