<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"

        tools:context="com.example.android.justjava.MainActivity">

        <EditText
            android:id="@+id/editText"
            style="@style/editText_style"
            android:layout_width="match_parent"

            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName"
            android:textColor="#57240F" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:gravity="center"
            android:text="@string/cappuccino_coffee"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"


            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:paddingLeft="10dp"
                android:src="@drawable/cappacino">


            </de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"

                    android:text="@string/quantity"
                    android:textAllCaps="true"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button2"
                        style="@style/button_style1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="40dp"
                        android:onClick="decrement"
                        android:text="@string/minus" />

                    <TextView
                        android:id="@+id/quantity_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/quantity_text"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button"
                        style="@style/button_style1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:onClick="increment"
                        android:text="@string/plus" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textColor="@color/colorBrown" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="24sp"
            android:text="@string/whipped_cream"
            android:textColor="@color/colorBrown"
            android:textSize="16sp" />


        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="24sp"
            android:text="@string/chocolate"
            android:textColor="@color/colorBrown"
            android:textSize="16sp" />


        <Button
            android:id="@+id/button3"
            style="@style/button_style1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:onClick="submitOrders"
            android:text="@string/order"
            android:textColor="@color/colorTransParentWhite" />


    </LinearLayout>
</ScrollView>